@@ -1117,9 +1117,11 @@ The Mount Volumes list works similarly to the <a href="#devices-settings-vol">Sh
 <p>would cause /dev/sdc1 and the OCZ device to be auto-mounted, and the volume with label "Label With Space" to not be auto-mounted.
 
 <!-- #Auto Mount|Mount Dirs #mdirs -->
-This dialog allows you to enter a single directory where SpaceFM should automatically create mount point directories for fuse and similar filesystems (%a in handler commands).  This directory must exist and be user-writable (do NOT use /media).  For best results with all handlers, avoid spaces and other special characters.  If left blank, ~/.cache/spacefm/ (or $XDG_CACHE_HOME/spacefm/) is used.
+This dialog allows you to enter a single directory where SpaceFM should automatically create mount point directories for fuse and similar filesystems (%a in handler commands).  This directory must be user-writable (do NOT use /media); if it doesn't already exist, it will be created (including parents).  For best results with all handlers, avoid spaces and other special characters.  If left blank, ~/.cache/spacefm/ (or $XDG_CACHE_HOME/spacefm/) is used.
 
-<p>Note that some handlers or mount programs may not obey this setting.  It will only be used by handlers which use %a in their mount or open commands.
+<p>The following variables are recognized and will be replaced with their current value:  $USER $UID $HOME $XDG_RUNTIME_DIR $XDG_CACHE_HOME
+
+<p>Note that some handlers or mount programs may not obey this setting.  It will only be used by <a href="#handlers">handlers</a> which use %a in their mount or open commands.
 
 <p>Anytime a device, protocol or file handler uses %a to automatically create a mount point, the specified directory will be used as the parent.  This applies to both manual and automatic mounts.
 
